--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     --text-color: #757575;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     width: 10px;
 }
 
@@ -31,7 +31,7 @@
 
 ::-webkit-scrollbar-thumb:hover {
     background: linear-gradient(transparent, var(--primaryHoverColor));
-}
+} */
 
 ::selection {
     background: var(--primaryColor);
