--- a/style.css
+++ b/style.css
@@ -15,9 +15,12 @@
     --text-white-color: #000;
     --text-color: #757575;
 }
-
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 0px;
 }
 
 ::-webkit-scrollbar-track {
@@ -25,12 +28,14 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background: linear-gradient(transparent, var(--primaryColor));
-    border-radius: 6px;
+    /* background: linear-gradient(transparent, var(--primaryColor)); */
+    /* border-radius: 6px; */
+    background: transparent;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(transparent, var(--primaryHoverColor));
+    /* background: linear-gradient(transparent, var(--primaryHoverColor)); */
+    background: transparent;
 }
 
 ::selection {
