--- a/style.css
+++ b/style.css
@@ -256,11 +256,11 @@ body.dark-theme {
     }
 }
 
-@media screen and (min-width:991.98px) and (max-width:1199.98px) {
+/* @media screen and (min-width:991.98px) and (max-width:1199.98px) {
     .custom-cnt {
         max-width: 1140px !important;
     }
-}
+} */
 
 @media screen and (min-width:991.98px) and (max-width:1399.98px) {
     .custom-nav-item {
